# khived

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .roomodes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PR-47-summary.md  PR-49-summary.md  README.md  pyproject.toml  pytest.ini  ruff.toml  test.ipynb
.github/workflows/: ci.yml
.khive/: pre-commit-base.yaml  stacks.yaml
.khive/mcps/: config.json
.khive/reports/crr/: CRR-100.md  CRR-142.md  CRR-81.md  CRR-82.md  CRR-84.md  CRR-97.md
.khive/reports/ip/: IP-100-P1.md  IP-126.md  IP-26.md  IP-27.md  IP-28.md  IP-29.md  IP-81.md  IP-82.md  IP-83.md  IP-84.md  IP-cli_enhancement_orchestration_plan.md
.khive/reports/memo/: MEMO-20250522-issue-resolution-progress.md
.khive/reports/rr/: RR-27-docling.md  RR-86.md  RR-DistributedTeamCollaboration.md  RR-GitWorkflowIntegration.md  RR-SecurityCompliance.md
.khive/reports/tds/: TDS-100.md  TDS-26-pydapter-ingestion.md  TDS-80.md
.khive/reports/ti/: TI-100-P1.md  TI-103.md  TI-26.md  TI-27.md  TI-28.md  TI-29.md  TI-81.md  TI-82.md  TI-83.md  TI-84.md  TI-85.md
.khive/scripts/: khive_fmt.sh
.roo/rules/: 00_overview.md  01_dev_style.md  02_testing_guide.md
.roo/rules-khive-architect/: MODE_INSTRUCTION.md
.roo/rules-khive-documenter/: MODE_INSTRUCTION.md
.roo/rules-khive-implementer/: MODE_INSTRUCTION.md
.roo/rules-khive-orchestrator/: MODE_INSTRUCTION.md
.roo/rules-khive-quality-reviewer/: MODE_INSTRUCTION.md
.roo/rules-khive-researcher/: MODE_INSTRUCTION.md
docs/: getting_started.md  protocols.md
docs/commands/: khive_mcp.md
docs/connections/: api_client.md  endpoint.md  endpoint_config.md  header_factory.md  match_endpoint.md  overview.md
docs/core-concepts/: async_queue.md  async_resource_management.md  resilience_patterns.md
docs/guides/: dev_style.md  general_guidance.md  testing_guide.md
docs/prompts/: response_structure.md
docs/reader/: README.md  architecture.md  quickstart.md
docs/reader/examples/: basic_usage.ipynb
docs/roo/: architect.md  documenter.md  implementer.md  orchestrator.md  researcher.md  reviewer.md
khive/: _class_registry.py  _errors.py  config.py  endpoint.py  khive_cli.py  khive_fmt.py  khive_init.py  khive_new_doc.py  khive_roo.py  utils.py
khive/_libs/: file.py  github.py  schema.py
khive/adapters/: adapter.py  json_adapter.py  pd_dataframe_adapter.py  toml_adapter.py  types.py  validation.py
khive/cli/: khive_ci.py  khive_clean.py  khive_cli.py  khive_commit.py  khive_fmt.py  khive_init.py  khive_mcp.py  khive_new_doc.py  khive_pr.py  khive_reader.py  khive_roo.py  khive_search.py  utils.py
khive/common/: logging.py  tracing.py
khive/connections/: endpoint.py  mcp_server.py
khive/connections/providers/: exa_search.py  oai_compatible.py  perplexity_chat.py
khive/core/: _class_registry.py
khive/core/traits/: adaptable.py  identifiable.py  invokable.py  polymorphic_reconstructable.py  utils.py
khive/protocols/: edge.py  element.py  event.py  graph.py  log.py  node.py  pile.py  types.py  utils.py
khive/providers/: exa_search.py  oai_compatible.py  perplexity_chat.py
khive/services/: endpoint.py  reader_service.py  search_service.py
khive/services/consult/: models.py
khive/services/info/: README.md  models.py
khive/services/providers/: exa_search.py  oai_compatible.py  ollama_chat.py  openai_chat.py  perplexity_chat.py
khive/services/reader/: README.md  models.py  reader.py  utils.py
khive/session/: branch.py
khive/tools/: reader_tool.py  search_tool.py
khived/: khive_cli.py
mcp_configs/: services.yaml
mcps/: khive_info.py  khive_reader.py
mcps/groups/: info_group.py  reader_group.py
notebook/: test.ipynb
reports/crr/: CRR-42-open-source-ready-docs.md  CRR-45-khive-fmt-and-url-sanitization.md  CRR-47-fix-argument-list-too-long-error.md  CRR-49-improve-khive-fmt-robustness-updated.md  CRR-49-improve-khive-fmt-robustness.md  CRR-50-fix-reader-service-async-operations.md
reports/ip/: IP-01-open-source-ready-docs.md  IP-47-fix-argument-list-too-long-error.md  IP-49-improve-khive-fmt-robustness.md  IP-50-reader-service-async-operations.md  IP-65-test-protocols-types.md  IP-67-test-protocols-identifiable.md  IP-68-test-protocols-temporal.md  IP-69-test-protocols-embedable.md  IP-70-test-protocols-invokable.md  IP-71-test-protocols-service.md  IP-72-test-protocols-event.md
reports/ti/: TI-65-test-protocols-types.md  TI-67-test-protocols-identifiable.md  TI-68-test-protocols-temporal.md  TI-69-test-protocols-embedable.md  TI-70-test-protocols-invokable.md  TI-71-test-protocols-service.md  TI-72-test-protocols-event.md
scripts/: openapi_to_pydantic.txt
src/khive/: __init__.py  config.py  utils.py
src/khive/cli/: khive_ci.py  khive_clean.py  khive_cli.py  khive_commit.py  khive_fmt.py  khive_info.py  khive_init.py  khive_mcp.py  khive_new_doc.py  khive_pr.py  khive_reader.py  khive_roo.py  khive_search.py
src/khive/clients/: __init__.py  api_client.py  errors.py  executor.py  protocols.py  queue.py  rate_limiter.py  (+1 more)
tests/: test_adapters.py  test_clientsession.py  test_graph.py  test_pile.py  test_protocols.py  test_services.py
tests/cli/: test_khive_ci.py  test_khive_clean.py  test_khive_commit.py  test_khive_fmt.py  test_khive_info.py  test_khive_init.py  test_khive_new_doc.py  test_khive_pr.py  test_khive_reader.py  test_khive_reader_performance.py
tests/clients/: __init__.py  test_api_client.py  test_executor.py  test_executor_rate_limiting.py  test_executor_resource_cleanup.py  test_queue.py  test_rate_limiter.py  test_rate_limiter_integration.py  test_resilience.py
tests/connections/: test_endpoint_additional.py  test_endpoint_coverage.py  test_endpoint_coverage_additional.py  test_endpoint_resource_cleanup.py
tests/integration/: test_queue_integration.py  test_resilience_integration.py  test_resource_cleanup_integration.py
tests/protocols/: README.md  __init__.py  test_embedable.py  test_event.py  test_identifiable.py  test_invokable.py  test_service.py  test_temporal.py  test_types.py
tests/services/: __init__.py
(+98 files in other folders)
