[project]
name = "khive"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.11.18",
    "aiolimiter>=1.2.1",
    "backoff>=2.2.1",
    "orjson>=3.10.18",
    "pydantic-settings>=2.9.1",
    "pydapter>=0.1.3",
    "pyyaml>=6.0.2",
    "datamodel-code-generator>=0.30.1",
    "fastmcp>=2.3.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=0.23.0", # Added pytest-asyncio
    "pytest-mock>=3.10.0",
    "ruff>=0.11.8",
]


[project.optional-dependencies]
reader = [
    "docling>=2.31.0",
    "tiktoken>=0.9.0",
]
openai = [
    "openai>=1.77.0",
]

mcp = [
    "mcp>=1.7.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khive"]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*",
]

[project.scripts]                # PEP 621 console-scripts table
khive         = "khive.cli.khive_cli:main"
