[project]
name = "khive"
version = "0.3.3"
description = "Autonomous software engineering department"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.0",
    "aiohttp>=3.11.0",
    "backoff>=2.0.0",
    "lionfuncs>=3.2.0",
    "pydantic-settings>=2.0.0",
    "pydapter>=0.1.8",
    "pyyaml>=6.0.0",
    "tiktoken>=0.8.0",
    "openai>=1.78.1",
    "orjson>=3.10.18",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "freezegun>=1.5.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=0.23.0", # Added pytest-asyncio
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.11.8",
    "tqdm>=4.67.1",
]


[project.optional-dependencies]
mcp = [
    "fastmcp>=2.3.3",
]

reader = [
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "html2text>=2020.1.16",
    "docling>=2.34.0",
    "boto3>=1.38.22",
]

schema = [
    "datamodel-code-generator>=0.30.1",
]

ollama = [
    "ollama>=0.4.8",
]

all = [
    "fastmcp>=2.3.3",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "html2text>=2025.1.0",
    "docling>=2.34.0",
    "datamodel-code-generator>=0.30.1",
    "ollama>=0.4.8",
    "boto3>=1.38.22",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=khive --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khive"]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*",
]

[project.scripts]                # PEP 621 console-scripts table
khive         = "khive.cli.khive_cli:main"
